--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   </head>
   <body>
     <!-- Encabezado 1 -->
-    <h1 id="header1" class="texto">COY COFFE</h1>
+    <h1 id="header1" class="textouno">COY COFFE</h1>
 
     <!-- Botón de Productos -->
 
     <button class="productods">Productos</button>
-
 
     <!-- Sección "Café molido" -->
     <div id="cafe-molido-section">
