--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <!-- Encabezado 1 -->
     <h1 id="header1" class="textouno">COY COFFE</h1>
 
+    <video class="video" id="video" width="640" height="360" controls autoplay>
+      <source src="video/cafe.mp4" type="video/mp4" />
+      <!-- Agrega aquí formatos adicionales del video si lo deseas -->
+      Tu navegador no admite el elemento de video.
+    </video>
+
     <!-- Botón de Productos -->
 
     <button class="productods">Productos</button>
