--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mi Página de Café</title>
+    <title>COY-COFFEE</title>
     <link rel="stylesheet" href="styles.css" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WhatsApp Icon</title>
   </head>
   <body>
     <!-- Encabezado 1 -->
@@ -21,49 +24,65 @@
       <h2>CAFÉ MOLIDO</h2>
       <!-- Aquí coloca el contenido para la sección de café molido -->
 
-      <h2>Café en Grano</h2>
+      <h2>CAFE EN GRANO</h2>
       <!-- Aquí coloca el contenido para la sección de café en grano -->
     </div>
 
     <!-- Sección "Café molido" -->
     <div id="cafe-molido-section">
       <h1 class="textocafe">CAFÉ MOLIDO</h1>
+      <br /><br />
       <!-- Aquí se cargarán las imágenes de café molido dinámicamente -->
+
+      <h1 class="precio">PRECIO</h1>
+      <h2 class="precio2">MEDIA LIBRA POR: <span class="precio3">13.000</span></h2>
+      <br />
+      <h2 class="precio2">UNA LIBRA POR :<span class="precio3">26.000 </span>  </h2>
     </div>
+    <br /><br /><br /><br />
 
     <!-- Sección "Café en Grano" -->
     <div id="cafe-en-grano-section">
       <h1 class="textocafe">CAFÉ EN GRANO</h1>
+      <br /><br /><br /><br />
       <!-- Aquí se cargarán las imágenes de café en grano dinámicamente -->
+
+      <h1 class="precio">PRECIO</h1>
+      <h2 class="precio2">MEDIA LIBRA POR: <span class="precio3">13.000</span></h2>
+      <br />
+      <h2 class="precio2">UNA LIBRA POR : 26.000</h2>
     </div>
   </body>
   <!-- Seccion de contacto -->
   <div class="contacto-section">
-    <h2>Información de Contacto</h2>
+    <h2 class="info">Información de Contacto</h2>
     <p>Teléfono: +57 3122305761</p>
+    <p>Teléfono: +57 3104680235</p>
+    <p>Email: josevicoy@gmail.com</p>
     <p>Email: brayan324554@gmail.com</p>
   </div>
 
   <!-- Sección de Política de Privacidad -->
   <div class="privacidad-section">
-    <h2>Política de Privacidad</h2>
-    <p>
-      En COY COFFEE, valoramos y respetamos tu privacidad. Esta política de
-      privacidad explica cómo recopilamos, utilizamos y protegemos la
-      información personal que nos proporcionas al utilizar nuestros servicios y
-      visitar nuestro sitio web.
-    </p>
+    <h2 class="info">Política de Privacidad</h2>
   </div>
 
   <!-- Sección de Acerca de Nosotros -->
   <div class="cecion">
-    <h2>Acerca de Nosotros</h2>
+    <h2 class="info">Acerca de Nosotros</h2>
     <p>
       Bienvenido a COY COFFEE, un lugar donde la pasión por el café y la calidad
-      se fusionan para brindarte una experiencia única en cada taza. Nuestra
-      historia comenzó con el deseo de compartir el encanto del café, desde su
-      origen hasta tu taza, y deleitar a los amantes de esta apreciada bebida.
+      se fusionan para brindarte una experiencia única en cada taza.
     </p>
-  </div>
+   
+    <div id="whatsapp-icon">
+      <span class="span">Contacto</span>
+      <a href="https://wa.me/+3052076713" target="_blank" rel="noopener noreferrer">
+        <img src="icono.jpeg" alt="WhatsApp Icon" />
+      </a>
+   
+    </div>
+    
+
   <script src="app.js"></script>
 </html>
