--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
     <button class="producto" onclick="toggleProductos()">Productos</button>
 
     <div id="productosSection" style="display: none">
-      <h2>CAFÉ MOLIDO</h2>
-      <!-- Aquí coloca el contenido para la sección de café molido -->
-
-      <h2>CAFE EN GRANO</h2>
-      <!-- Aquí coloca el contenido para la sección de café en grano -->
+      <h2 class="producto">CAFÉ MOLIDO  </h2>
+      <h2 class="producto">CAFE EN GRANO <br> <span class="precio4"> <br> <br>MEDIA LIBRA : 13.000<br><br>LIBRA POR : 26000</span> </h2><br><br><br><br>
+   
     </div>
 
     <!-- Sección "Café molido" -->
@@ -35,9 +33,9 @@
       <!-- Aquí se cargarán las imágenes de café molido dinámicamente -->
 
       <h1 class="precio">PRECIO</h1>
-      <h2 class="precio2">MEDIA LIBRA POR: <span class="precio3">13.000</span></h2>
+      <h2 class="precio2">MEDIA LIBRA POR : <span class="precio3">13.000</span></h2>
       <br />
-      <h2 class="precio2">UNA LIBRA POR :<span class="precio3">26.000 </span>  </h2>
+      <h2 class="precio2">UNA LIBRA POR : <span class="precio3">26.000 </span>  </h2>
     </div>
     <br /><br /><br /><br />
 
@@ -48,9 +46,9 @@
       <!-- Aquí se cargarán las imágenes de café en grano dinámicamente -->
 
       <h1 class="precio">PRECIO</h1>
-      <h2 class="precio2">MEDIA LIBRA POR: <span class="precio3">13.000</span></h2>
+      <h2 class="precio2">MEDIA LIBRA POR : <span class="precio3">13.000</span></h2>
       <br />
-      <h2 class="precio2">UNA LIBRA POR : 26.000</h2>
+      <h2 class="precio2">UNA LIBRA POR : <pan class="precio3">26.000 </pan> </h2>
     </div>
   </body>
   <!-- Seccion de contacto -->
